<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/CookIT2"
    tools:context=".AgregarIngredientes">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/CategoriasTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:text="Agregar Ingrediente"
            android:textSize="36sp"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/IngredienteInputLayout"
        style="@style/CookIT2"
        android:textColor="@color/primary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:textColorHint="@color/primary_text"
        android:hint="@string/nombre_del_ingrediente"
        app:helperText="Requerido*"
        app:helperTextTextColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/GrasastInputLayout"
        style="@style/CookIT2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/Grasa_total"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_text"
        app:helperText="Requerido*"
        app:helperTextTextColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputEditText>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/proteínasInputLayout"
        style="@style/CookIT2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/carbohidratos"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_text"
        app:helperText="Requerido*"
        app:helperTextTextColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/carbohidratosInputLayout"
        style="@style/CookIT2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/prote_nas"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_text"
        app:helperText="Requerido*"
        app:helperTextTextColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/colesterolInputLayout"
        style="@style/CookIT2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/colesterol"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_text"
        app:helperText="Requerido*"
        app:helperTextTextColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/BottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="675dp"
        android:elevation="8dp"
        app:labelVisibilityMode="selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/bottom_navigation">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <Button
        android:id="@+id/button"
        android:background="@color/primary"
        android:textColor="@color/icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="125dp"
        android:text="@string/CANCELAR"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proteínasInputLayout" />

    <Button
        android:id="@+id/button2"
        android:background="@color/primary"
        android:textColor="@color/icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="125dp"
        android:text="@string/AGREGAR"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/proteínasInputLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>